# suffix-arrays-

./: .gitignore  README.md  go.mod
cpp/: CMakeLists.txt  README.md
cpp/include/: bitvector.hpp  bwt.hpp  fm_index.hpp  fmi_container.hpp  huffman.hpp  mtf.hpp  rle0.hpp  sa_mm.hpp  sais.hpp  suffix_array_mm.hpp
cpp/src/: bwt.cpp  fm_index.cpp  fmi_container.cpp  huffman.cpp  main.cpp  main_fmi.cpp  mtf.cpp  rle0.cpp  sa_mm.cpp  sais.cpp  suffix_array_mm.cpp
data/: occ_the_libro1.txt
docs/: profiling.md  report_template.md
python/: README.md  bench.py  fm_index.py  manber_myers_fixed.py  sais_fixed.py
scripts/: bench.py  manber_myers.py  run_python_bench.ps1  run_python_bench.sh  sais.go  sais.py
